// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox Matches the snapshot (dropdown) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 96px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c1:focus {
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:focus {
  outline: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #DBDEE1;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:focus {
  outline: none;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: #FFFFFF;
  color: #B7BBC2;
  cursor: default;
}

.c5:focus {
  outline: none;
}

.c4 {
  color: #60666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-activedescendant="undefined_optionB"
  aria-multiselectable="false"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionA"
      id="undefined_optionA"
      role="option"
    >
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected="true"
      class="c3"
      data-testid="listitem-optionB"
      id="undefined_optionB"
      role="option"
      selected=""
    >
      <svg
        class="c4"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionC"
      id="undefined_optionC"
      role="option"
    >
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionD"
      id="undefined_optionD"
      role="option"
    >
      Option D
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c5"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="undefined_optionDisabled"
      role="option"
    >
      Option Disabled
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot (multiselect + checkIndicator) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c1:focus {
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:focus {
  outline: none;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4:focus {
  outline: none;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: #FFFFFF;
  color: #B7BBC2;
  cursor: default;
}

.c5:focus {
  outline: none;
}

.c3 {
  color: #60666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-multiselectable="true"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="true"
      class="c2"
      data-testid="listitem-optionA"
      id="undefined_optionA"
      role="option"
      selected=""
    >
      <svg
        class="c3"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected="false"
      class="c4"
      data-testid="listitem-optionB"
      id="undefined_optionB"
      role="option"
    >
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected="true"
      class="c2"
      data-testid="listitem-optionC"
      id="undefined_optionC"
      role="option"
      selected=""
    >
      <svg
        class="c3"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c4"
      data-testid="listitem-optionD"
      id="undefined_optionD"
      role="option"
    >
      Option D
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c5"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="undefined_optionDisabled"
      role="option"
    >
      Option Disabled
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 96px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c1:focus {
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:focus {
  outline: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #DBDEE1;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:focus {
  outline: none;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: #FFFFFF;
  color: #B7BBC2;
  cursor: default;
}

.c5:focus {
  outline: none;
}

.c4 {
  color: #60666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-activedescendant="undefined_optionB"
  aria-multiselectable="false"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionA"
      id="undefined_optionA"
      role="option"
    >
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected="true"
      class="c3"
      data-testid="listitem-optionB"
      id="undefined_optionB"
      role="option"
      selected=""
    >
      <svg
        class="c4"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionC"
      id="undefined_optionC"
      role="option"
    >
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionD"
      id="undefined_optionD"
      role="option"
    >
      Option D
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c5"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="undefined_optionDisabled"
      role="option"
    >
      Option Disabled
    </li>
  </ul>
</div>
`;
